FIX: Relative include in a settings must be evaluated relatively to the settings file (IVY-372)
git-svn-id: https://svn.apache.org/repos/asf/ant/ivy/core/trunk@647607 13f79535-47bb-0310-9956-ffa450edef68